# AgenticTeam

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  configure-secrets.sh  deploy-azure.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
app/: __init__.py  config.py  demo.py  main.py  runtime.py
app/agents/: base.py  echo.py  llm_agent.py  orchestrator_agent.py
app/api/: __init__.py  chat.py  routes.py  sessions.py
app/core/: __init__.py  message_bus.py  models.py
app/orchestration/: __init__.py  orchestrator.py
app/services/: __init__.py  llm_pool.py  mcp.py
docs/: architecture.md  azure-decision-tree.md  azure-deploy-tutorial.md  azure-deployment.md  azure-hosting-options.md  chat-interface.md  extension-guide.md  getting-started.md  mcp-quickstart.md  migration-to-production.md  operations.md  overview.md  roadmap.md  verification-report.md
infrastructure/: main.bicep
tests/: test_chat.py  test_orchestrator.py
