[project]
name = "agentic-team"
version = "0.1.0"
description = "Proof-of-concept orchestrator managing AI agents with A2A communication"
authors = [{ name = "Agentic Team" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
